syntax = "proto3";

package LotsCopying;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Auction.LotsArchive.Presentation.GrpcApi";

service Copying {
	rpc GetLotCopy (GetLotCopyQueryGrpc) returns (GetLotCopyResponseGrpc);
}

message GetLotCopyQueryGrpc {
	string SellerId = 1;
	string LotId = 2;
}

message LotInfoModelGrpc {
	string Id = 1;
	string Title = 2;
	string Description = 3;
}

message LotParamsModelGrpc {
	double StartingPrice = 1;
    double BidIncrement = 2;
    google.protobuf.DoubleValue RepurchasePrice = 3;
    google.protobuf.Timestamp StartDateTime = 4;
    google.protobuf.Timestamp EndDateTime = 5;
}

message LotCopyModelGrpc {
	LotInfoModelGrpc LotInfo = 1;
	LotParamsModelGrpc LotParams = 2;
}

message GetLotCopyResponseGrpc{
	bool IsError = 1;
	string ErrorMessage = 2;
	LotCopyModelGrpc LotCopy = 3;
}
